Fixed table text alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,7 +24,7 @@ body {
       p {
         text-align: center;
       }
-      
+
     }
 
     &.info {
@@ -83,6 +83,11 @@ table.pmcPanel {
     background-color: #333;
     padding: 5px;
     font-size: 16px;
+
+    * {
+      text-align: left;
+    }
+
   }
 
   th {
